manifests/haproxy-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-haproxy
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: haproxy
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: haproxy-ingress.github.io/controller
